--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -1,7 +1,7 @@
 <h1 align="center">My Portfolio</h1>
 <h3>Search for Stocks</h3>
 <div id="stock-lookup">
-	<%= form_tag search_stocks_path, method: :get, id: "stock-lookup-form" do %>
+	<%= form_tag search_stocks_path, remote: true, method: :get, id: "stock-lookup-form" do %>
 		<div class="form-group row no-padding text-center col-md-12">
 			<div class="col-md-10">
 				<%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true, class: "form-control search-box input-lg" %>
@@ -15,10 +15,6 @@
 	<% end %>
 </div>
 
-<% if @st %>
-	<div class="well results-block">
-	  <strong>Symbol: </strong> <%#= @st.symbol %>
-	  <strong>Name: </strong> <%= @st.name %>
-	  <strong>Price: </strong> <%= @st.last_price %>
-	</div>
-<% end %>
+<div id="results">
+	<%= render 'users/results' %>
+</div>
