--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,11 +47,22 @@
         </button>
         <a class="navbar-brand" href="#">FinTracker</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
+        <% if current_user %>
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <li><%= link_to "My Portfolio",my_portfolio_path  %></li>
+            <li><%= link_to "My Profile", edit_registration_path(current_user)  %></li>
           </ul>
+
+          <ul class="nav navbar-right col-md-4">
+            <li class="col-md-8 user-name text-right">
+              <i class="fa fa-user"></i>
+              <%= current_user.full_name.present? ? current_user.full_name : current_user.email %>
+            </li>
+            <li class="col-md-4 logout">
+              <%= link_to("Logout", destroy_user_session_path, class: "btn btn-xs btn-danger", method: :delete) %>
+            </li>
+          </ul>
+        <% end %>
         </div>
       </div>
     </div>
@@ -67,7 +78,7 @@
       <footer>
         <p>&copy; Company 2018</p>
       </footer>
-
+      <%= debug(params) if Rails.env.development? %>
     </div> <!-- /container -->
 
   </body>
