--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,7 @@
           <ul class="nav navbar-nav">
             <li><%= link_to "My Portfolio",my_portfolio_path  %></li>
             <li><%= link_to "My Profile", edit_registration_path(current_user)  %></li>
+            <li> <%= link_to "Friends", friends_path%></li>
           </ul>
 
           <ul class="nav navbar-right col-md-4">
