added lookup partial for friends and added search* method for users

--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -1,5 +1,6 @@
-<% if @frnds.size > 0 %>
 
+<%= render 'friends/lookup' %>
+<% if @frnds.size > 0 %>
 	<table class="table table-striped">
 		<thead>
 			<tr>
